# zlib.1.2.11

./: CMakeLists.txt  README.md  zlibConfig.cmake.in
src_external_exam/: CMakeLists.txt  mymathApp.cc
win32/: zlib1.rc
zlib_19.0.24215.1_install/lib/: zlibd.lib  zlibstaticd.lib
zlib_19.0.24215.1_install/lib/cmake/zlib/: zlibConfig.cmake  zlibConfigVersion.cmake  zlibTargets-debug.cmake  zlibTargets.cmake
